--- a/style.css
+++ b/style.css
@@ -2,12 +2,17 @@ body {
   background: #ffc600;
 }
 
+h1 {
+  text-align: center;
+  font-size: 50px;
+}
+
 .inbox {
   max-width: 400px;
   background-color: white;
-  margin: 50px auto;
+  margin: 10px auto;
   border-radius: 5px;
-  box-shadow: 10px 10px 0 rgba(0,0,0,0.1);
+  box-shadow: 10px 10px rgba(0,0,0,0.1);
 }
 
 .item {
@@ -25,4 +30,8 @@ label {
 
 input {
   margin: 10px;
+}
+
+label.checked {
+  text-decoration: line-through;
 }
