--- a/style.css
+++ b/style.css
@@ -1,37 +1,38 @@
 body {
-  background: #ffc600;
+    background: #ffc600;
 }
 
 h1 {
-  text-align: center;
-  font-size: 50px;
+    text-align: center;
+    font-size: 50px;
 }
 
 .inbox {
-  max-width: 400px;
-  background-color: white;
-  margin: 10px auto;
-  border-radius: 5px;
-  box-shadow: 10px 10px rgba(0,0,0,0.1);
+    max-width: 400px;
+    background-color: white;
+    margin: 10px auto;
+    border-radius: 5px;
+    box-shadow: 10px 10px rgba(0, 0, 0, 0.1);
 }
 
 .item {
-  display: flex;
-  align-items: center;
-  border-bottom: 1px solid #F1F1F1;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #F1F1F1;
 }
 
 label {
-  padding: 10px;
-  flex: 1;
-  font-size: 18px;
-  border-left: 1px solid black;
+    padding: 10px;
+    flex: 1;
+    font-size: 18px;
+    border-left: 1px solid black;
 }
 
 input {
-  margin: 10px;
+    margin: 10px;
 }
 
-input:checked + label {
-  text-decoration: line-through;
+input:checked+label {
+    text-decoration: line-through;
+    background-color: #F9F9F9;
 }
